--- a/mursaleen.html
+++ b/mursaleen.html
@@ -3,12 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Python</title>
+    <title>Document</title>
 </head>
 <body>
-    <h1>Umer Hassan </h1>
-
-    <h3>Sindhu</h3>
-    
+    <h1>Mursaleeen</h1>
 </body>
 </html>
